--- a/about.html
+++ b/about.html
@@ -75,24 +75,67 @@
 <section id="about" class="about section-bg">
   <div class="container">
     <div class="row gy-4">
-      <div class="col-lg-6">
-        <img src="assets/img/contact/image.jpg" class="img-fluid rounded-3 mb-4" alt="">
-        <p>
-          Our focus on safety, quality, and sustainability ensures that every project contributes to the city's growth and development. We're more than a construction company; we're your partners in building a better Kigali. Contact us today to start your next project with us.
-        </p>
-   </div>
+      <div class="col-lg-6 honore">
+
+        <div id="imageCarousel1" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="assets/img/contact/slide-1/image-1.jpg" class="img-fluid rounded-3 mb-4" alt="">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/img/contact/slide-1/image-2.jpg" class="img-fluid rounded-3 mb-4" alt="">
+            </div>
+            <div class="carousel-item">
+              <img src="assets/img/contact/slide-1/image-3.jpg" class="img-fluid rounded-3 mb-4" alt="">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#imageCarousel1" role="button" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#imageCarousel1" role="button" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </a>
+        </div>
+        <h2 class="text-left">Our vision</h2>
+        <ul  class="ps-0" style="list-style: none;">
+          <li><i class="bi bi-check-circle-fill"></i> Our vision is to build prosperous future through innovation & safety.</li>
+          <li><i class="bi bi-check-circle-fill"></i> We craft iconic, lasting structures, prioritizing safety and quality.</li>
+          <li><i class="bi bi-check-circle-fill"></i>Our commitment to quality and safety shapes a legacy of excellence.</li>
+          <li><i class="bi bi-check-circle-fill"></i>We empower communities, creating a more prosperous tomorrow.</li>
+        </ul>
+      </div>      
+      
       <div class="col-lg-6">
         <div class="content ps-0 ps-lg-5">
-          <h2 class="text-right">Our Missions</h2>
+          <h2 class="text-right">Our Mission</h2>
           <ul>
             <li><i class="bi bi-check-circle-fill"></i> Creating more than buildings, we build relationships.</li>
             <li><i class="bi bi-check-circle-fill"></i> Turning blueprints into reality.</li>
             <li><i class="bi bi-check-circle-fill"></i> We don't just build, we create legacies.</li>
             <li><i class="bi bi-check-circle-fill"></i> Excellence in construction is our foundation.</li>
-            <li><i class="bi bi-check-circle-fill"></i> Our construction journey is a symphony of hard work, expertise and collaboration.</li>
           </ul>
-          <div class="position-relative mt-4">
-            <img src="assets/img/contact/image-2.png" class="img-fluid rounded-3" alt="">
+          <div id="imageCarousel2" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="assets/img/contact/slide-2/image-1.jpg" class="img-fluid rounded-3 mb-4" alt="">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/img/contact/slide-2/image-2.jpg" class="img-fluid rounded-3 mb-4" alt="">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/img/contact/slide-2/image-3.jpg" class="img-fluid rounded-3 mb-4" alt="">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#imageCarousel2" role="button" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#imageCarousel2" role="button" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </a>
           </div>
         </div>
       </div>
@@ -109,29 +152,17 @@
         <div class="row gy-4 justify-content-center align-items-center">
           <div class="col-xl-3 col-md-4 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
-              <img src="assets/img/team/honore.jpg" class="img-fluid" alt="">
+              <img src="assets/img/team/ceo.jpg" class="img-fluid" alt="">
               <h4>Ir. Vincent FATURURIMI</h4>
               <span>Chief Executive Officer</span>
-              <div class="social">
-                <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-whatsapp"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-twitter"></i></a>
-              </div>
             </div>
           </div><!-- End Team Member -->
 
           <div class="col-xl-3 col-md-4 d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
-              <img src="assets/img/team/honore.jpg" class="img-fluid" alt="">
+              <img src="assets/img/team/secre.jpg" class="img-fluid" alt="">
               <h4>Ir. Kwizera John</h4>
               <span>Secretary and Architecture Engineer</span>
-              <div class="social">
-                <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-whatsapp"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-twitter"></i></a>
-              </div>
             </div>
           </div><!-- End Team Member -->
 
@@ -252,11 +283,11 @@
             <p><a href="https://maps.app.goo.gl/Lr2Qd9SX5wMqLJ8M8"><i class="bx bx-map"></i></a>Kigali, Nyarugenge</p>
             <p><a href="tel:+250781649555"><i class="bx bx-phone"></i></a>+250 781 649 555 &nbsp; <a href="tel:+250732607798"><i class="bx bx-phone"></i></a>+250 732 607 798</p>
               <div class="social-links mt-3">
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://web.facebook.com/profile.php?id=61553062705367" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="https://wa.me/250781649555" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+                <a href="https://twitter.com/VincentFaturur1" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a href="https://www.instagram.com/jvc_engineering_groupltd/" class="instagram"><i class="bx bxl-instagram"></i></a>
+                
               </div>
           </div>
 
