--- a/services.html
+++ b/services.html
@@ -107,7 +107,7 @@
                 <div class="icon">
                   <i class="bi bi-geo"></i>
                 </div>
-                <h3>Land Surveyin</h3>
+                <h3>Land Surveying</h3>
                 <p>We offer precise land surveying services to provide essential data and insights for your property development or land management needs, ensuring accuracy and compliance with project requirements</p>
                
               </div>
@@ -202,7 +202,7 @@
                     <p>Our expertise lies in the execution of complex engineering construction projects, delivering quality, safety, and precision from inception to completion</p>
                      </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/features/feature-2.png" alt="" class="img-fluid">
+                    <img src="assets/img/features/engineer.png" alt="" class="img-fluid rounded-2">
                   </div>
                 </div>
               </div>
@@ -291,11 +291,11 @@
             <p><a href="https://maps.app.goo.gl/Lr2Qd9SX5wMqLJ8M8"><i class="bx bx-map"></i></a>Kigali, Nyarugenge</p>
             <p><a href="tel:+250781649555"><i class="bx bx-phone"></i></a>+250 781 649 555 &nbsp; <a href="tel:+250732607798"><i class="bx bx-phone"></i></a>+250 732 607 798</p>
               <div class="social-links mt-3">
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://web.facebook.com/profile.php?id=61553062705367" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="https://wa.me/250781649555" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+                <a href="https://twitter.com/VincentFaturur1" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a href="https://www.instagram.com/jvc_engineering_groupltd/" class="instagram"><i class="bx bxl-instagram"></i></a>
+                
               </div>
           </div>
 
