--- a/contact.html
+++ b/contact.html
@@ -74,9 +74,8 @@
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
-
-        <div>
-           <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d255197.24161012282!2d29.736699645095374!3d-1.9713744712135572!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19dca5a587d7a5dd%3A0x732077ad7d5b38b6!2sNyarugenge%2C%20Kigali!5e0!3m2!1sen!2srw!4v1698531915418!5m2!1sen!2srw" frameborder="0" allowfullscreen></iframe>
+         <div>
+           <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3987.492349638716!2d30.0558450737536!3d-1.9565199980257515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19dca42c50d756ab%3A0x6e0745a904064f71!2sGitega%20Sector%20Office!5e0!3m2!1sen!2srw!4v1698865363696!5m2!1sen!2srw" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="row mt-5">
@@ -86,7 +85,7 @@
               <div class="address">
                 <a href="https://maps.app.goo.gl/Lr2Qd9SX5wMqLJ8M8"><i class="bi bi-geo-alt"></i></a>
                 <h4>Location:</h4>
-                <p>Kigali, Nyarugenge</p>
+                <p>23V4+MHJ, KN 2 Ave, Kigali</p>
               </div>
 
               <div class="email">
@@ -194,11 +193,11 @@
             <p><a href="https://maps.app.goo.gl/Lr2Qd9SX5wMqLJ8M8"><i class="bx bx-map"></i></a>Kigali, Nyarugenge</p>
             <p><a href="tel:+250781649555"><i class="bx bx-phone"></i></a>+250 781 649 555 &nbsp; <a href="tel:+250732607798"><i class="bx bx-phone"></i></a>+250 732 607 798</p>
               <div class="social-links mt-3">
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://web.facebook.com/profile.php?id=61553062705367" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="https://wa.me/250781649555" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+                <a href="https://twitter.com/VincentFaturur1" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a href="https://www.instagram.com/jvc_engineering_groupltd/" class="instagram"><i class="bx bxl-instagram"></i></a>
+                
               </div>
           </div>
 
