--- a/about.html
+++ b/about.html
@@ -28,11 +28,8 @@
   <!-- Honore Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  
 </head>
-
 <body>
-
    <!-- ======= Header ======= -->
    <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container">
@@ -205,7 +202,7 @@
                       <div class="d-flex align-items-center">
                         <img src="assets/img/testimonials/person.png"class="testimonial-img flex-shrink-0" alt="">
                         <div>
-                          <h3>Olivier SANO</h3>
+                          <h3>Olivier ISHIMWE</h3>
                           <h4>Client</h4>
                           
                         </div>
@@ -280,7 +277,7 @@
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Our Address</h4>
-            <p><a href="https://maps.app.goo.gl/Lr2Qd9SX5wMqLJ8M8"><i class="bx bx-map"></i></a>Kigali, Nyarugenge</p>
+            <p><a href="https://maps.app.goo.gl/Lr2Qd9SX5wMqLJ8M8"><i class="bx bx-map"></i></a>KN 2 Ave, Kigali</p>
             <p><a href="tel:+250781649555"><i class="bx bx-phone"></i></a>+250 781 649 555 &nbsp; <a href="tel:+250732607798"><i class="bx bx-phone"></i></a>+250 732 607 798</p>
               <div class="social-links mt-3">
                 <a href="https://web.facebook.com/profile.php?id=61553062705367" class="facebook"><i class="bx bxl-facebook"></i></a>
