--- a/contact.html
+++ b/contact.html
@@ -54,9 +54,7 @@
       </div><!-- End Header Container -->
     </div>
   </header><!-- End Header -->
-
   <main id="main">
-
     <!-- ======= Breadcrumbs ======= -->
     <div class="bradcam_area bradcam_bg_2">
       <div class="container">
@@ -70,7 +68,6 @@
       </div>
       </div>
       </div><!-- End Breadcrumbs -->
-
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container">
@@ -99,11 +96,8 @@
                 <h4>Call:</h4>
                 <p>+250 786 663 517</p>
               </div>
-
             </div>
-
           </div>
-
           <div class="col-lg-8 mt-5 mt-lg-0">
 
             <form name="submit-to-google-sheet" method="post" role="form" class="php-email-form">
@@ -150,15 +144,12 @@
 
       </div>
     </section><!-- End Contact Section -->
-
   </main><!-- End #main -->
-
     <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="footer-top">
       <div class="container">
         <div class="row">
-
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
               <h4>JVC Engineering Group Ltd</h4>
@@ -167,7 +158,6 @@
               </p>
             </div>
           </div>
-
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
@@ -177,7 +167,6 @@
               <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Contact</a></li>
             </ul>
           </div>
-
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
@@ -187,24 +176,20 @@
               <li><i class="bx bx-chevron-right"></i> <a href="services.html">Project Supervision & Consultation</a></li>
             </ul>
           </div>
-
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Our Address</h4>
-            <p><a href="https://maps.app.goo.gl/Lr2Qd9SX5wMqLJ8M8"><i class="bx bx-map"></i></a>Kigali, Nyarugenge</p>
+            <p><a href="https://maps.app.goo.gl/Lr2Qd9SX5wMqLJ8M8"><i class="bx bx-map"></i></a>KN 2 Ave, Kigali</p>
             <p><a href="tel:+250781649555"><i class="bx bx-phone"></i></a>+250 781 649 555 &nbsp; <a href="tel:+250732607798"><i class="bx bx-phone"></i></a>+250 732 607 798</p>
               <div class="social-links mt-3">
                 <a href="https://web.facebook.com/profile.php?id=61553062705367" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="https://wa.me/250781649555" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
                 <a href="https://twitter.com/VincentFaturur1" class="twitter"><i class="bx bxl-twitter"></i></a>
                 <a href="https://www.instagram.com/jvc_engineering_groupltd/" class="instagram"><i class="bx bxl-instagram"></i></a>
-                
               </div>
           </div>
-
         </div>
       </div>
     </div>
-
     <div class="container">
       <div class="copyright">
         &copy; Copyright <strong><span>2023</span></strong>. All Rights Reserved
