--- a/services.html
+++ b/services.html
@@ -29,12 +29,8 @@
 
   <!-- Honore Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  
 </head>
-
 <body>
-
    <!-- ======= Header ======= -->
    <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container">
@@ -72,9 +68,6 @@
       </div>
       </div>
       </div><!-- End Breadcrumbs -->
-
-
-
     <!-- ======= Services Section ======= -->
       <section id="services" class="services sections-bg">
         <div class="container" data-aos="fade-up">
@@ -150,9 +143,6 @@
   
         </div>
       </section><!-- End Our Services Section -->
-
-
-
     <!-- ======= Features Section ======= -->
     <section id="features" class="features">
       <div class="container">
@@ -245,11 +235,8 @@
 
       </div>
     </section><!-- End Features Section -->
-    
 
   </main><!-- End #main -->
-
-
 
     <!-- ======= Footer ======= -->
   <footer id="footer">
@@ -288,7 +275,7 @@
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>Our Address</h4>
-            <p><a href="https://maps.app.goo.gl/Lr2Qd9SX5wMqLJ8M8"><i class="bx bx-map"></i></a>Kigali, Nyarugenge</p>
+            <p><a href="https://maps.app.goo.gl/Lr2Qd9SX5wMqLJ8M8"><i class="bx bx-map"></i></a>KN 2 Ave, Kigali</p>
             <p><a href="tel:+250781649555"><i class="bx bx-phone"></i></a>+250 781 649 555 &nbsp; <a href="tel:+250732607798"><i class="bx bx-phone"></i></a>+250 732 607 798</p>
               <div class="social-links mt-3">
                 <a href="https://web.facebook.com/profile.php?id=61553062705367" class="facebook"><i class="bx bxl-facebook"></i></a>
